--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 	<fieldset>
 	<legend> Personal Info</legend>
-	<p>First Name<input type="text" placeholder="First name">
-	Middle Initial<input type="text" placeholder="Middle Initial">
-	Last Name<input type="text" placeholder="Last Name">
-	</p>
-	Address<input type="text" placeholder="Address"> 
-	Occupation<input type="text" placeholder="Occupation">
-	Employer<input type="text" placeholder="Employer">
-	Employer Address<input type="text" placeholder="Employer Address">
+	<label for='fn'>First Name<input type="text" placeholder="First name" name='fn'></label>
+	<label for='mi'>Middle Initial<input type="text" placeholder="Middle Initial" name='mi'></label>
+	<label for='ln'>Last Name<input type="text" placeholder="Last Name" name='ln'></label>
+	
+	Address<input type="text" placeholder="Address" name='Address'> 
+	Occupation<input type="text" placeholder="Occupation" name='Occupation'>
+	Employer<input type="text" placeholder="Employer" name='Employer'>
+	Employer Address<input type="text" placeholder="Employer Address" name='Employer_A'>
 	</fieldset>
 	<fieldset>
 	<legend> Loan Details</legend>
@@ -29,15 +29,15 @@
 		<option>Mortgage</option>
 	</select>
 	Requested amount of loan<input type="number" name="loan_amount">
-	 <p>Length of loan</p>
-	<input type="radio" name="length" value="5 years"> 5 years
-	<input type="radio" name="length" value="15 years"> 15 years
-	<input type="radio" name="length" value="30 years"> 30 years
-	<p> Special conditions</p>
-	<input type="checkbox" name="special" value="down"> I have a down payment
-	<input type="checkbox" name="special" value="married"> Out-of-state resident
-	<input type="checkbox" name="special" value="OOS"> Married
-	<input type="checkbox" name="special" value="co-signed"> Loan will be co-signed
+	 Length of loan
+	<label><input type="radio" name="length" value="5 years"> 5 years</label>
+	<label><input type="radio" name="length" value="15 years"> 15 years</label>
+	<label><input type="radio" name="length" value="30 years"> 30 years</label>
+	 Special conditions
+	<label><input type="checkbox" name="special" value="down"> I have a down payment</label>
+	<label><input type="checkbox" name="special" value="married"> Out-of-state resident</label>
+	<label><input type="checkbox" name="special" value="OOS"> Married</label>
+	<label><input type="checkbox" name="special" value="co-signed"> Loan will be co-signed</label>
 	</fieldset>
 	<fieldset>
 	<legend>Additional info</legend>
